content/documentation/mocha/8.0.0/UserGuide/en_US/export_mattes.adoc

== Exporting Mattes and Clips

NOTE: Some export formats listed below are not available for *Mocha HitFilm or Mocha AE*.  For a full comparison of features, please refer to the comparison chart online.

WARNING: Some shape data formats are not supported across 360 seams and poles in Equirectangular space and may not export as expected.


=== Exporting Rendered Shapes [[rendered_shapes]]

NOTE: This feature is only available in *Mocha Pro*

When your roto work is complete and you would like to export your mattes, choose the menu item File -> Export Rendered Shapes... to be guided through the rendering process.

image:UserGuide/en_US/images/exportm_001.jpg[]

The render dialog will give you options to choose either the currently selected layer, all visible layers or all the layers in the project.

image:UserGuide/en_US/images/exportm_002.jpg[]

Options include:

*Colorize output*

Choose whether you want to render grayscale mattes or by their layer fill color.

*Export to*

The export options for Image Sequences and QuickTime movies.

For Image Sequence you have the following options:

* *Directory:* The directory where you want to export your image sequence.
* *File Format:* A list of available image formats to render to.
* *Prefix:* The name of the clip to go in front of the frame numbers.
* *Suffix:* The name of the clip to go after the frame numbers (blank by default).
* *Index Start:* The number to start the exported sequence from.  By default this is the first frame in the timeline.
* *Index Width:* The number of padding zeroes to use.

==== Exporting QuickTime movies

Which video file format reader you are using will determine the export handling of clips:

* *Using QuickTime:* Choosing 'QuickTime movie'  will bring up the legacy QuickTime export options when you click OK.
* *Using GStreamer:* Choosing 'QuickTime movie'  will bring up the GStreamer export dialog when you click OK. This currently only supports ProRes.

=== Exporting Stereo Rendered shapes

The render dialog also allows you to render to single footage streams or a combined stream via EXR.

.To export a rendered shape:
. Go to *File | Export Rendered Shapes...*
. Choose the mattes you want to export in the top radio buttons.
	.. *Selected:* The last selected layer.
	.. *All Visible:* Only the layers that have visibility turned on in the layer controls
	.. *All:* All layers except ones you have specifically deactivated.
. Choose the Color Output:
	.. *Grayscale:* The default black and white mattes with feather.
	.. *By matte color:* The same as Grayscale, only the mattes are  colored according to what you defined each layer matte color to be in the Layer Controls.
	.. *By layer ID:* A special use case for those that want the mattes to be colored by their layer ID.
. Under "Export Views" select the render option you want:
	.. *Current Only:* Renders the current view you have selected.
	.. *To single footage stream:* Renders all views to a single file.  You are limited to rendering to EXR or SXR.
	.. *To separate footage streams:* Renders the views as individual sequences.
. Then choose your file path and render format.

image:UserGuide/en_US/images/4.0.0_Export_Rendered_Shapes.jpg[]

If you have chosen to render the current view or separate footage streams, the view abbreviation will be suffixed to the rendered export automatically, so there is no need to define this in the file name.


=== Exporting as Mocha shape for After Effects Data

IMPORTANT: It is important that the clip length, frame rate, frame size, interlace mode, pulldown mode and pixel aspect ratio in the project match the corresponding settings in the After Effects project where you plan to use the data. You can change the frame rate and pixel aspect ratio settings in the Film and Time sections of the Clip tab.

The Mocha shape plug-in will import the following data into After Effects:

* One or more shapes, which may be either Bezier or X-Spline
* The 'plane' that was generated by the Planar Tracker. This defines the overall movement of the shape(s)
* Shape point keyframes set in the project
* Per-point feathered edges

If you wish to export a single layer, select it before proceeding with the export.

When you are ready to export, select Export Shape Data button. On the dialog that opens, choose if to export the selected layer, all visible layers or all layers.

image:UserGuide/en_US/images/exportm_003.jpg[]

When you have made the right selection, click _Copy to Clipboard_, then switch to After Effects.

In After Effects, import the same footage and ensure that the frame rate and pixel aspect ratio are the same as those used when generating the shape. You can change these values in After Effects by selecting File | Interpret Footage | Main....

Bring the footage into a composition, then select Edit | Paste to add the shape effects to the composition. Each shape exported will come across as its own plug-in effect.

NOTE: In Mocha V5 onwards we changed the shape export for After Effects to remove key padding. This means you must now paste to the same frame in After Effects as the project in point in Mocha, rather than the beginning of the clip.

In the plug-in controls you can change the following parameters:

*Blend mode*

You can choose to change the blend mode from the one assigned to the shape by selecting Multiply, Add or Subtract from the dropdown menu.


*Invert*

When checked, inverts the matte.


*Render soft edge*

If you have created the shape with feathered edges but wish to switch these off, untick this parameter. Note that if you have not created feathered edges this will have no effect.


*Render type*

This setting allows you to choose between various render effects. The default is the 'Shape cutout' which uses the matte to cut out the corresponding area in the background footage. 'Color composite' will apply a single color to the area within the matte, useful when wanting to preview the positions of multiple layers. Note that the Opacity setting affects this color fill, allowing you to blend it with the background footage. 'Color shape cutout' combines the effects of the previous two.


*Shape color*

Defines the color of the color fill applied when selecting the 'Color composite' render type.


*Opacity*

Defines the opacity of the color fill applied when selecting the 'Color composite' render type.

=== Exporting Adobe Premiere Pro CC Masks

Exporting shapes to Adobe Premiere Pro CC is very similar to exporting shapes to After Effects

. Select a shape and go to "Export Shape Data..."
. Choose *Adobe Premiere shape data*
. Choose if you want to export the selected layer, all visible layers or all layers
. Copy to the Clipboard

Importing is just as straightforward:

. In Adobe Premiere Pro CC, select your clip on the timeline
. In the *Effects* panel, click on *Opacity*
. Paste the data using CMD/Ctrl + V or right-click and choose Paste
. You can also apply the masks to most effects, by adding the effect to your clip, selecting the effect in the *Effects* panel and pasting.

image:UserGuide/en_US/images/4.0.0_Premiere_Shape.png[]

=== Exporting as Mocha shape for Final Cut

The Mocha shape plug-in will import the following data into Final Cut:

* One or more shapes, which may be either Bezier or X-Spline
* The 'plane' that was generated by the Planar Tracker. This defines the overall movement of the shape(s)
* Shape point keyframes set in the project
* Per-point feathered edges

If you wish to export a single layer, select it before proceeding with the export.

When you are ready to export, select Export Shape Data button. On the dialog that opens, choose if to export the selected layer, all visible layers or all layers.

When you have made the right selection, click Save and select a destination to save the XML file to, then switch to Final Cut.

In Final Cut, import the XML file by CTRL-clicking in the project asset window.

image:UserGuide/en_US/images/exportm_004.jpg[]

Select 'Import', then 'XML...' and finally select the XML file that you exported.

Accept all the defaults in the 'Import XML...' dialog.

Your Mocha shape sequence will now appear in your list of project assets.

image:UserGuide/en_US/images/exportm_005.jpg[]

To use the shape to composite the rotoscoped object over a new background, simply place the Mocha shape sequence in a video track above the background sequence.

image:UserGuide/en_US/images/exportm_006.jpg[]


*Additional controls*

If you want access to the actual matte, individual layers of the matte or control that affect the appearance of the matte, double click on the Mocha shape sequence to reveal the two main sequences it consists of - the original sequence and the ContourSequence.


image:UserGuide/en_US/images/exportm_007.jpg[]

Double clicking the ContourSequence will reveal the individual layers that the ContourSequence consists of. Dragging a layer into the viewer and selecting 'Controls' will give you access to controls of that layer, as shown below.


image:UserGuide/en_US/images/exportm_008.jpg[]

*Invert*

When checked, inverts the matte.

*Soft edge*

If you have created the shape with feathered edges but wish to switch these off, untick this parameter. Note that if you have not created feathered edges this will have no effect.

*Render mode*

'Luma' will cause the layer to render itself in the RGB channels, whereas 'Alpha' will cause the layer to render itself in the alpha channel of the generated sequence.

*Matte color*

Defines the color of the matte being rendered.


=== Exporting Flame Gmask and Flame Gmask Tracer data

Mocha can export masks as either direct Flame Gmask nodes or Flame Gmask Tracer nodes.

These formats are broken down into:

* *Flame Tracer [Shape + Axis] (.mask):* This is a Gmask Tracer node split into the keyframed shape data on a Gmask and the separate tracking data in an Axis. This makes it easier to change the mask data in Flame or attach other nodes to the Axis tracking data.
* *Flame Tracer [Basic] (.mask):* This is a Gmask Tracer node with the Mocha tracking data and shape keyframes combined into Gmask keyframes without an axis.
* *Flame Gmask Script (.gmask):* This is a straight Gmask node with the Mocha tracking data and shape keyframes combined into keyframes without an axis.

You can select the type from the "Export Shapes" dialog:

image:UserGuide/en_US/images/export_flame_gmask_tracer.jpg[]

*Importing into Flame*

To import the mask data into Flame:

. Create a new Gmask or Gmask Tracer node in Batch
. Click the Load Node Button: +
image:UserGuide/en_US/images/flame_load_node.jpg[]+
. Navigate to the saved '.mask' file and open it

You should then see the Gmask results in the Flame output.

If you are using GMask Tracer, you can view the Axis or Gmask nodes via the Gmask Schematic:

image:UserGuide/en_US/images/flame_gmask_schematic.jpg[width="40%"]


=== Exporting Shake Rotosplines

Choose a shape (not a layer) and select Export Shape Data... from the File menu. A dialog will show with a drop-down containing 3 different saving options.

Choose the target application and hit Save. The data going into the file is not binary, and is shown in the dialog so that you may copy and paste it directly into a text editor if you prefer to work that way.

Because of differences in the way Splines are handled in the application, maintaining accurate keyframe interpolation between our software and the other applications requires that the exported shapes have a keyframe on every frame. This is not a bug but required to ensure your mattes look right once they&rsquo;ve been imported into your compositing application.



=== Exporting Shapes to HitFilm

You can export Mocha shape data directly to a HitFilm Composite Shot file.

Exporting shapes to HitFilm is very similar to exporting HitFilm Camera solves:

. Select a shape and go to "Export Shape Data..."
. Choose *HitFilm [Transform & Shape]*
. Choose if you want to export the selected layer, all visible layers or all layers
. Click Save and choose a file name

image:UserGuide/en_US/images/4.1.0_Export_HitFilm_Shape_Data.jpg[]

Importing is done via the Compositing section:

. In HitFilm go to your Composite section
. Choose Import > Composite Shot
. Select the saved HFCS file from Mocha
. HitFilm will then load the Composite Shot with the footage you tracked in Mocha and layers with shape masks.


=== Exporting Roto, RotoPaint and SplineWarp Nodes to Nuke

You can export a Roto, RotoPaint or SplineWarp node straight to the clipboard or to a .nk script by choosing Nuke Roto Paint (*.nk) from the Export Shape Data dialog.

To export shapes to Nuke:

. Select a shape and go to "Export Shape Data..."
. Choose one of the Nuke exports
. Choose if you want to export the selected layer, all visible layers or all layers
. If you choose Copy to Clipboard you can immediately switch over to Nuke, select the node you wish to apply the shape data to and Paste the data.
. Alternatively you can import your saved Nuke Script from the File menu.

image:UserGuide/en_US/images/exportm_009.jpg[]

You have the option of exporting Basic Roto data which bakes the keyframes, or Transform and Shape data which separates the tracking data from the manual keyframes.

The latter makes the data less heavy and is only supported in Nuke 6.2 and above.

The SplineWarp node exports each layer as a joined set of splines with the spline keyframes separate from the tracked data (which is set in each curves transform).

For example if you only have 1 tracked layer to export, Mocha will export that layer to SplineWarp as two joined splines in A.

You can then modify the second spline for the warp, or delete it and choose another.

=== Exporting Shape Data to Blackmagic Fusion Shapes

To export shape data to the Fusion shape format, click the *Export Shape Data...* button in the Track module or from the File menu.

You can export the shape data by saving it to file or by copying it to the clipboard:

image:UserGuide/en_US/images/5.0.0_export_fusion_shape_data.jpg[]

To import the shape data into Fusion, either paste directly into the Fusion Flow View or open the comp file from the file menu.
The Mocha layers will come in as separate nodes into the Flow View.


=== Exporting Shape Data to MochaBlend

To export shape data to the Good Spirit Graphics MochaBlend plugin, click the *Export Shape Data...* button in the Track module or from the File menu.

You can export the shape data by either saving it to file, or copying to the clipboard:

image:UserGuide/en_US/images/4.1.3_Export_MochaBlend_Shape_Data.jpg[]

To import the shape data into the plugin, you start by selecting an available slot in MochaBlend and then either paste or open the data file:

image:UserGuide/en_US/images/4.1.3_Paste_MochaBlend_Track_Data.jpg[]

Once imported, you can then adjust your scene to fit the data. It is important to make sure you check the warnings and correct any relevant items before setting up your rig:

image:UserGuide/en_US/images/4.1.3_Imported_MochaBlend_Shape_Data.jpg[]

.Adjusting the data to fit with MochaBlend:
. If there is a warning about format mismatch, click the green "Import Format" link in the MochaBlend window
. If there is a warning about no camera rig, click the green "Create Rig" or "Set Active Rig" according to your needs
. Finally make sure that you click the "Set Timeline to Data" if your project timeline is different from the frame range you tracked in Mocha

You can then go ahead and create the splines under the Objects settings. See MochaBlend documentation for further information on working with shape data in the plugin.

=== Exporting Shape Data to Silhouette Shapes

To export shape data to the Silhouette FXS shape format, click the *Export Shape Data...* button in the Track module or from the File menu.

You can export the shape data by saving it to file or copying to the clipboard:

image:UserGuide/en_US/images/5.0.0_export_silhouette_shape_data.jpg[width="40%"]

To import the shape data into Silhouette, create a Roto node in the existing session and the import the data from File -> Import... -> Silhouette Shapes menu option, or paste from the clipboard:

image:UserGuide/en_US/images/5.0.0_export_silhouette_shape_data_workflow.jpg[width="60%"]

=== Exporting Stereo Shape Data

Exporting stereo Shape data from Mocha is the same as exporting in mono mode, however now you can choose the view you want to export.

.To export stereo Shape data from Mocha:
. Select a layer
. Click "Export Shape Data..." from the Track module or choose the option from the file menu (*File | Export Shape Data...*)
. Select the Application you wish to export to
. Select the view you want to export (or check "Export all views" if it is available for that export format)
. Choose whether you want to export the currently selected layer, all visible layers or all layers
. Click "Copy to Clipboard" or "Save" depending on your preference. Note that some exports only allow you to save the data.

image:UserGuide/en_US/images/4.0.0_Export_Shape_Data.jpg[]

Nuke Roto exported as "Export All Views" will paste to Nuke as a combined roto node.  If you would prefer the nodes to be separate, export using the different views instead of checking the all views option.


=== Exporting Rendered Clips (Mocha Pro)

You can export a clip to an image sequence or QuickTime format by choosing "Export Rendered Clip..." from the file menu.

image:UserGuide/en_US/images/export_rendered_clip.jpg[]

Options include:

*Clip*

Choose the clip you want to export.

*Frame range*

The range of frames you wish to export.  If you choose to export the full range but have not rendered all your frames, the next drop down, "Revert to clip" will be used.

*Revert to clip*

Choose how to export frames that have not been rendered.  If you choose None or the current clip to export, black frames will be exported for non-rendered frames.

*Save channels*

By default, this will just export the flattened render (Color), but if your render has alpha you can choose this also.

*Export to*

The export options for Image Sequences and QuickTime movies.

For Image Sequence you have the following options:

* *Directory:* The directory where you want to export your image sequence.
* *File Format:*  A list of available image formats to render to.
* *Prefix:* The name of the clip to go in front of the frame numbers.
* *Suffix:*  The name of the clip to go after the frame numbers (blank by default).
* *Index Start:* The number to start the exported sequence from.  By default this is the first frame in the timeline.
* *Index Width:* The number of padding zeroes to use.

==== Exporting QuickTime movies

Which video file format reader you are using will determine the export handling of clips:

* *Using QuickTime:* Choosing 'QuickTime movie'  will bring up the legacy QuickTime export options when you click OK.
* *Using GStreamer:* Choosing 'QuickTime movie'  will bring up the GStreamer export dialog when you click OK. This currently only supports ProRes.

image:UserGuide/en_US/images/gstreamer_export_dialog.jpg[width="40%"]

See the <<video_files, Video Files>> in Preferences chapter for more on clip exports.

=== Exporting Stereo Rendered Clips

The render dialog also allows you to render to single streams or a combined stream via EXR.

.To export a rendered clip:
. Go to *File | Export Rendered Clips...*
. Choose the clip you want to export in the top drop down.  By default it chooses the last render.
. Select your frame range you want to export.  This defaults to the In/Out range.
. Under "Export Views" select the render option you want:
	.. *Current Only:* Renders the current view you have selected.
	.. *To single stream:* Renders all views to a single file.  You are limited to rendering to EXR or SXR.
	.. *To separate footage streams:* Renders the views as individual sequences.
. Then choose your file path and render format.

image:UserGuide/en_US/images/4.0.0_Export_Rendered_Clip.jpg[]

If you have chosen to render the current view or separate footage streams, the view abbreviation will be suffixed to the rendered export automatically, so there is no need to define this in the file name.
